--- a/ola-mundo/index.html
+++ b/ola-mundo/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu primeiro site em HTML5</title>
+    <title>Curso de HTML5</title>
+    <style>
+        h1 {
+            font-family: Arial;
+            font-size: 30pt;
+            color: blue;
+            text-shadow: 2px 2px 2px black;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Olá, Mundo!</h1>
+    <h2>Me livrando da maldição</h2>
+    <h1>OBA! Me livrei!</h1>
 </body>
 </html>
