--- a/projeto-glass-html5/index.html
+++ b/projeto-glass-html5/index.html
@@ -1,7 +1,19 @@
-Google Glass
-A revolução do Google está chegando
-
-[AQUI ENTRA UMA FOTO]
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tudo sobre Google Glass</title>
+</head>
+<body>
+<div id="interface">
+    <header id="cabecalho">
+    <hgroup>
+    <h1>Google Glass</h1>
+    <h2>revolução do Google está chegando</h2>
+    </hgroup>
+    <img src="_imagens/glass-oculos-preto-peq.png"/>
 
 Menu Principal
 - Home
@@ -9,7 +21,7 @@ Menu Principal
 - Fotos
 - Multimídia
 - Fale conosco
-
+    </header>
 Tecnologia > Inovações
 Saiba tudo sobre o Google Glass
 por Gustavo Guanabara
@@ -51,3 +63,6 @@ Além da surpresa do áudio, a tela montada a frente do olho do usuário também
 
 Copyright 2013 - by Gustavo Guanabara
 Facebook | Twitter
+</div>
+</body>
+</html>
