--- a/projeto-glass-html5/index.html
+++ b/projeto-glass-html5/index.html
@@ -3,12 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Tudo sobre Google Glass</title>
-    <style>
-        p {
-            text-align: justify;
-            text-indent: 50px;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
 </head>
@@ -39,7 +34,13 @@ Menu Principal
 <h2>O que é</h2>
 <p>O <span style="font-weight: bold;">Google Glass</span> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <span style="font-style: italic;">Project Glass</span>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <span style="font-style: italic;">Google Glass</span> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
 
-[AQUI ENTRA UMA FOTO]
+<figure>
+    <img src="_imagens/glass-quadro-homem-mulher.jpg" alt="homem e mulher utilizando o google glass"/>
+    <figcaption>
+        <h3>Google Glass</h3>
+        <p>Uma nova maneira de ver o mundo.</p>
+    </figcaption>
+</figure>
 
 <h2>Data de lançamento</h2>
 <p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja disponível em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.</p>
