--- a/projeto-glass-html5/index.html
+++ b/projeto-glass-html5/index.html
@@ -34,7 +34,7 @@ Menu Principal
 <h2>O que é</h2>
 <p>O <span style="font-weight: bold;">Google Glass</span> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <span style="font-style: italic;">Project Glass</span>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <span style="font-style: italic;">Google Glass</span> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
 
-<figure>
+<figure class="foto-legenda">
     <img src="_imagens/glass-quadro-homem-mulher.jpg" alt="homem e mulher utilizando o google glass"/>
     <figcaption>
         <h3>Google Glass</h3>
