--- a/projeto-glass-html5/index.html
+++ b/projeto-glass-html5/index.html
@@ -16,12 +16,16 @@
     </hgroup>
     <img src="_imagens/glass-oculos-preto-peq.png"/>
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
+<nav>
+    <h1>Menu Principal</h1>
+    <ol type="1">
+        <li>Home</li>
+        <li>Especificações</li>
+        <li>Fotos</li>
+        <li>Multimídia</li>
+        <li>Fale conosco</li>
+    </ol>
+</nav>
     </header>
 
 <hgroup>
