--- a/projeto-glass-html5/index.html
+++ b/projeto-glass-html5/index.html
@@ -19,11 +19,11 @@
 <nav>
     <h1>Menu Principal</h1>
     <ol type="1">
-        <li>Home</li>
-        <li>Especificações</li>
-        <li>Fotos</li>
-        <li>Multimídia</li>
-        <li>Fale conosco</li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="specs.html" target="_self">Especificações</a></li>
+        <li><a href="fotos.html">Fotos</a></li>
+        <li><a href="multimidia.html">Multimídia</a></li>
+        <li><a href="fale-conosco.html">Fale conosco</a></li>
     </ol>
 </nav>
     </header>
@@ -36,7 +36,7 @@
 </hgroup>
 
 <h2>O que é</h2>
-<p>O <span style="font-weight: bold;">Google Glass</span> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <span style="font-style: italic;">Project Glass</span>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <span style="font-style: italic;">Google Glass</span> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
+<p>O <span style="font-weight: bold;">Google Glass</span> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <span style="font-style: italic;">Project Glass</span>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <a href="http://glass.google.com" target="_blank">Google Glass</a> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
 
 <figure class="foto-legenda">
     <img src="_imagens/glass-quadro-homem-mulher.jpg" alt="homem e mulher utilizando o google glass"/>
