--- a/projeto-glass-html5/index.html
+++ b/projeto-glass-html5/index.html
@@ -16,20 +16,20 @@
     </hgroup>
     <img src="_imagens/glass-oculos-preto-peq.png"/>
 
-<nav>
+    <nav id="menu">
     <h1>Menu Principal</h1>
-    <ol type="1">
+    <ul type="disc">
         <li><a href="index.html">Home</a></li>
         <li><a href="specs.html" target="_self">Especificações</a></li>
         <li><a href="fotos.html">Fotos</a></li>
         <li><a href="multimidia.html">Multimídia</a></li>
         <li><a href="fale-conosco.html">Fale conosco</a></li>
-    </ol>
-</nav>
+    </ul>
+    </nav>
     </header>
 
 <hgroup>
-<h3>Inovações</h3>
+<h3>Tecnologia > Inovações</h3>
 <h1>tudo sobre o Google Glass</h1>
 <h2>Gustavo Guanabara</h2>
 <h3>em 23/Abril/2013</h3>
