--- a/projeto-glass-html5/index.html
+++ b/projeto-glass-html5/index.html
@@ -29,11 +29,15 @@
     </header>
 
 <section id="corpo">
+
+<article id="noticia-principal">
 <hgroup>
+<header id="cabecalho-artigo">
 <h3>Tecnologia > Inovações</h3>
-<h1>tudo sobre o Google Glass</h1>
+<h1>Saiba tudo sobre o Google Glass</h1>
 <h2>Gustavo Guanabara</h2>
-<h3>em 23/Abril/2013</h3>
+<h3 class="direita">Atualizado em 23/Abril/2013</h3>
+</header>
 </hgroup>
 
 <h2>O que é</h2>
@@ -50,7 +54,7 @@
 <h2>Data de lançamento</h2>
 <p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja disponível em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.</p>
 
-<h1>Especificações Técnicas</h1>
+<h2>Especificações Técnicas</h2>
 <table id="tabelaspec">
 <caption>Tabela Técnica do Google Glass<span>Mar/2013</span></caption>
 
@@ -61,13 +65,14 @@
 <tr><td class="cell-right">Bluetooth</td></tr>
 <tr><td class="cell-left">Memória Interna</td><td class="cell-right">12GB</td></tr>
 </table>
-<h1>Como funciona</h1> 
+<h2>Como funciona</h2> 
 <p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED na parte superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim como selecionar opções com o movimento da cabeça</p>
 
-<h1>O que você pode fazer com o Google Glasses</h1>
+<h2>O que você pode fazer com o Google Glasses</h2>
 <p>O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-<wbr/>humano”, já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p> 
 
 [AQUI ENTRA UM VÍDEO]
+</article>
 </section>
 <aside id="lateral">
 <h1>Outras Notícias</h1>
