--- a/projeto-glass-html5/specs.html
+++ b/projeto-glass-html5/specs.html
@@ -44,7 +44,13 @@
         <p>Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.</p>
         
         <section id="conteudo">
-            <img src="_imagens/glass-esquema-marcado.jpg" alt="imagem do Google Glass com seções demarcadas">
+            <img src="_imagens/glass-esquema-marcado.jpg" usemap="#meumapa" alt="imagem do Google Glass com seções demarcadas">
+            <map name="meumapa">
+                <area shape="poly" coords="183,220,266,209,266,243,185,256" href="google-glass.html#tela" target="janela"/>
+                <area shape="circle" coords="159,244,12" href="google-glass.html#camera" target="janela"/>
+                <area shape="circle" coords="77,51,12" href="google-glass.html#gadgets" target="janela"/>
+                <area shape="poly" coords="28,145,83,216,83,252,27,167" href="google-glass.html#sensores" target="janela">
+            </map>
             <iframe src="google-glass.html" name="janela" id="frame-spec"></iframe>
         </section>
     </article>
