--- a/projeto-glass-html5/fale-conosco.html
+++ b/projeto-glass-html5/fale-conosco.html
@@ -29,10 +29,17 @@
         </nav>
     </header>
 
-Fale Conosco > Contato
-Formulário de Contato
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+<section id="corpo-full">
+    <article id="noticia-principal">
+        <header id="cabecalho-artigo">
+           <hgroup>
+               <h3>Fale Conosco > Contato</h3>
+               <h1>Formulário de Contato</h1>
+               <h2>por Gustavo Guanabara</h2>
+               <h3 class="direita">Atualizado em 01/Maio/2013</h3>
+           </hgroup>
+       </header>
+
 
 Identificação do Usuário
     Nome:
@@ -61,6 +68,9 @@ Quero um Google Glass
 
 
 [BOTÃO ENVIAR]
+
+    </article>
+</section>
 
 <footer id="rodape">
     <p>Copyright &copy; 2013 - by Gustavo Guanabara <br/>
