--- a/projeto-glass-html5/multimidia.html
+++ b/projeto-glass-html5/multimidia.html
@@ -40,10 +40,16 @@
             </hgroup>
         </header>
 
-Áudio e Vídeo
-
-[AQUI ENTRA UM VÍDEO]
-[AQUI ENTRA UM ÁUDIO]
+<div id="tv-radio">
+    <audio id="musica" controls="controls">
+        <source src="_media/2009-lovers-carvings-bibio.mp3" type="audio/mpeg"/>
+        Desculpe, não foi possível reproduzir o áudio.
+    </audio>
+    <video id="filme" controls="controls" poster="_imagens/video-mini03.jpg">
+        <source src="_media/getting-started.mp4" type="video/mp4"/>
+        Desculpe, não foi possível reproduzir o video.
+    </video>
+</div>
 
     </article>
 </section>
