--- a/projeto-glass-html5/multimidia.html
+++ b/projeto-glass-html5/multimidia.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Tudo sobre Google Glass</title>
     <link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
+    <link rel="stylesheet" href="_css/media.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
     <script src="_javascript/funcoes.js"></script>
