--- a/projeto-glass-html5/fale-conosco.html
+++ b/projeto-glass-html5/fale-conosco.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Tudo sobre Google Glass</title>
     <link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
+    <link rel="stylesheet" href="_css/form.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
     <script src="_javascript/funcoes.js"></script>
@@ -40,32 +41,38 @@
            </hgroup>
        </header>
 
+<fieldset id="usuario"><legend>Identificação do Usuário</legend>
+    <p><label for="cNome">Nome:</label> <input type="text" name="tNome" id="cNome" size="20" maxlength="30" placeholder="Nome Completo"/> </p>
+    <p><label for="cSenha">Senha:</label> <input type="password" name="tSenha" id="cSenha" size="8" maxlength="8" placeholder="8 dígitos"/></p>
+    <p><label for="cEmail">E-mail:</label> <input type="email" name="tEmail" id="cEmail" size="20" maxlength="40"/></p>
+    <fieldset id="sexo"><legend>Sexo</legend>
+        <input type="radio" name="tSexo" id="cMasc"/> <label for="cMasc">Masculino</label><br/>
+        <input type="radio" name="tSexo" id="cFem"/> <label for="cFem">Feminino</label> 
+    </fieldset>   
+    <p><label for="CNasc">Data de Nascimento:</label> <input type="date" name="tNasc" id="CNasc"> </p>
+</fieldset>
 
-Identificação do Usuário
-    Nome:
-    Senha:
-    E-mail:
-    Sexo:
-        - Masculino
-        - Feminino
-    Data de Nascimento:
+<fieldset id="endereco">
+<legend>Endereço do Usuário</legend>
+    <p><label for="cRua">Logradouro:</label> <input type="text" name="tRua" id="cRua" size="18" maxlength="80" placeholder="Rua, av., travessa, etc."/> </p>
+    <p><label for="cNum">Número:</label> <input type="number" name="tNum" id="cNum" min="0" max="9999"/> </p> 
+    <p>Estado:</p> 
+    <p>Cidade:</p> 
+</fieldset>
 
-Endereço do Usuário
-    Logradouro:
-    Número:
-    Estado:
-    Cidade:
-
-Mensagem do Usuário
+<fieldset id="mensagem">
+<legend>Mensagem do Usuário</legend>
     Grau de Urgência:
     Mensagem:
+</fieldset>
 
-Quero um Google Glass
+<fieldset id="pedido">
+<legend>Quero um Google Glass</legend>
     Gostaria de adquirir um Google Glass quando disponível
     Cor:
     Quantidade:
     Preço Total: R$
-
+</fieldset>
 
 [BOTÃO ENVIAR]
 
