--- a/projeto-glass-html5/fale-conosco.html
+++ b/projeto-glass-html5/fale-conosco.html
@@ -41,40 +41,65 @@
            </hgroup>
        </header>
 
-<fieldset id="usuario"><legend>Identificação do Usuário</legend>
-    <p><label for="cNome">Nome:</label> <input type="text" name="tNome" id="cNome" size="20" maxlength="30" placeholder="Nome Completo"/> </p>
-    <p><label for="cSenha">Senha:</label> <input type="password" name="tSenha" id="cSenha" size="8" maxlength="8" placeholder="8 dígitos"/></p>
-    <p><label for="cEmail">E-mail:</label> <input type="email" name="tEmail" id="cEmail" size="20" maxlength="40"/></p>
-    <fieldset id="sexo"><legend>Sexo</legend>
-        <input type="radio" name="tSexo" id="cMasc"/> <label for="cMasc">Masculino</label><br/>
-        <input type="radio" name="tSexo" id="cFem"/> <label for="cFem">Feminino</label> 
-    </fieldset>   
-    <p><label for="CNasc">Data de Nascimento:</label> <input type="date" name="tNasc" id="CNasc"> </p>
-</fieldset>
+<form method="post" id="fContato" action="mailto:contato@cursoemvideo.com">
 
-<fieldset id="endereco">
-<legend>Endereço do Usuário</legend>
-    <p><label for="cRua">Logradouro:</label> <input type="text" name="tRua" id="cRua" size="18" maxlength="80" placeholder="Rua, av., travessa, etc."/> </p>
-    <p><label for="cNum">Número:</label> <input type="number" name="tNum" id="cNum" min="0" max="9999"/> </p> 
-    <p>Estado:</p> 
-    <p>Cidade:</p> 
-</fieldset>
+    <fieldset id="usuario"><legend>Identificação do Usuário</legend>
+        <p><label for="cNome">Nome:</label> <input type="text" name="tNome" id="cNome" size="20" maxlength="30" placeholder="Nome Completo"/> </p>
+        <p><label for="cSenha">Senha:</label> <input type="password" name="tSenha" id="cSenha" size="8" maxlength="8" placeholder="8 dígitos"/></p>
+        <p><label for="cEmail">E-mail:</label> <input type="email" name="tEmail" id="cEmail" size="20" maxlength="40"/></p>
+        <fieldset id="sexo"><legend>Sexo</legend>
+            <input type="radio" name="tSexo" id="cMasc"/> <label for="cMasc">Masculino</label><br/>
+            <input type="radio" name="tSexo" id="cFem"/> <label for="cFem">Feminino</label> 
+        </fieldset>   
+        <p><label for="CNasc">Data de Nascimento:</label> <input type="date" name="tNasc" id="CNasc"> </p>
+    </fieldset>
 
-<fieldset id="mensagem">
-<legend>Mensagem do Usuário</legend>
-    Grau de Urgência:
-    Mensagem:
-</fieldset>
+    <fieldset id="endereco">
+    <legend>Endereço do Usuário</legend>
+        <p><label for="cRua">Logradouro:</label> <input type="text" name="tRua" id="cRua" size="18" maxlength="80" placeholder="Rua, av., travessa, etc."/> </p>
+        <p><label for="cNum">Número:</label> <input type="number" name="tNum" id="cNum" min="0" max="9999"/> </p> 
+        <p><label for="cEst">Estado:</label>
+            <select name="tEst" id="cEst">
+                <optgroup label="Região Sudeste">
+                    <option value="RJ">Rio de Janeiro</option>
+                    <option value="SP" selected>São Paulo</option>
+                    <option value="MG">Minas Gerais</option>
+                </optgroup>
+                <optgroup label="Regial Sul">
+                    <option value="PR">Paraná</option>
+                    <option value="SC">Santa Catarina</option>
+                    <option value="RS">Rio Grande do Sul</option>
+                </optgroup>
+            </select>
+        </p>
+        <p><label for="cCid"> Cidade: </label>
+            <input type="text" name="tCid" id="cCid" maxlength="40" size="20" placeholder="Sua Cidade" list="cidades"/></p>
+            <datalist id="cidades">
+                <option value="Rio de Janeiro"></option>
+                <option value="Nova Iguaçu"></option>
+                <option value="Niterói"></option>
+                <option value="Belford Roxo"></option>
+            </datalist>
+    </fieldset>
 
-<fieldset id="pedido">
-<legend>Quero um Google Glass</legend>
-    Gostaria de adquirir um Google Glass quando disponível
-    Cor:
-    Quantidade:
-    Preço Total: R$
-</fieldset>
+    <fieldset id="mensagem">
+    <legend>Mensagem do Usuário</legend>
+        <p><label for="cUrg">Grau de Urgência:</label>
+            Mín<input type="range" name="tUrg" id="cUrg" min="0" max="10" step="2"/>Máx</p>
+        <p><label for="cMsg">Mensagem:</label> 
+            <textarea name="tMsg" id="cMsg" cols="45" rows="5" placeholder="Deixe aqui sua mensagem"></textarea></p> 
+    </fieldset>
+
+    <fieldset id="pedido">
+    <legend>Quero um Google Glass</legend>
+        Gostaria de adquirir um Google Glass quando disponível
+        Cor:
+        Quantidade:
+        Preço Total: R$
+    </fieldset>
 
 [BOTÃO ENVIAR]
+</form>
 
     </article>
 </section>
