--- a/projeto-glass-html5/fale-conosco.html
+++ b/projeto-glass-html5/fale-conosco.html
@@ -8,6 +8,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
     <script src="_javascript/funcoes.js"></script>
+    <script>
+        function calc_total() {
+            var qtd = parseInt(document.getElementById('cQtd').value);
+            tot = qtd * 1500;
+            document.getElementById('cTot').value = tot;
+        }
+    </script>
 </head>
 <body>
 <div id="interface">
@@ -41,7 +48,7 @@
            </hgroup>
        </header>
 
-<form method="post" id="fContato" action="mailto:contato@cursoemvideo.com">
+<form method="post" id="fContato" action="mailto:contato@cursoemvideo.com" oninput="calc_total();">
 
     <fieldset id="usuario"><legend>Identificação do Usuário</legend>
         <p><label for="cNome">Nome:</label> <input type="text" name="tNome" id="cNome" size="20" maxlength="30" placeholder="Nome Completo"/> </p>
@@ -87,18 +94,22 @@
         <p><label for="cUrg">Grau de Urgência:</label>
             Mín<input type="range" name="tUrg" id="cUrg" min="0" max="10" step="2"/>Máx</p>
         <p><label for="cMsg">Mensagem:</label> 
-            <textarea name="tMsg" id="cMsg" cols="45" rows="5" placeholder="Deixe aqui sua mensagem"></textarea></p> 
+            <textarea name="tMsg" id="cMsg" cols="35" rows="5" placeholder="Deixe aqui sua mensagem"></textarea></p> 
     </fieldset>
 
     <fieldset id="pedido">
     <legend>Quero um Google Glass</legend>
-        Gostaria de adquirir um Google Glass quando disponível
-        Cor:
-        Quantidade:
-        Preço Total: R$
+        <p><input type="checkbox" name="tPed" id="cPed" checked/>
+        <label for="cPed">Gostaria de adquirir um Google Glass quando disponível</label></p>
+        <p><label for="cCor">Cor:</label>
+        <input type="color" name="tCor" id="cCor" value="#0000FF"></p>
+        <p><label for="cQtd">Quantidade:</label>
+        <input type="number" name="tQtd" id="cQtd" min="0" max="5" value="0"/></p>
+        <p><label for="cTot">Preço Total: R$</label>
+        <input type="text" name="tTot" id="cTot" placeholder="Total a Pagar" readonly/></p>
     </fieldset>
 
-[BOTÃO ENVIAR]
+<input type="image" name="tEnviar" src="_imagens/botao-enviar.png">
 </form>
 
     </article>
